--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="ce">CE</string>
     <string name="c">C</string>
     <string name="deleteLast"><![CDATA[<]]></string>
-    <string name="delete">/</string>
+    <string name="divide">/</string>
     <string name="seven">7</string>
     <string name="eight">8</string>
     <string name="nine">9</string>
@@ -25,4 +25,5 @@
     <string name="zero">0</string>
     <string name="coma">,</string>
     <string name="equals">=</string>
+    <string name="button">button</string>
 </resources>
